Remove external dependency from test

--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -89,16 +89,14 @@ jobs:
             /data/schistosoma_haematobium.TD2_PRJEB44434.WBPS19.genomic.fa.gz \
             --fai /data/schistosoma_haematobium.TD2_PRJEB44434.WBPS19.genomic.fa.gz.fai \
             --gzi /data/schistosoma_haematobium.TD2_PRJEB44434.WBPS19.genomic.fa.gz.gzi \
-            --assembly 'Schistosoma haematobium' \
-            --not-editable
+            --assembly 'Schistosoma haematobium'
 
           apollo assembly \
             add-from-fasta \
             /data/schistosoma_mansoni.PRJEA36577.WBPS19.genomic.fa.gz \
             --fai /data/schistosoma_mansoni.PRJEA36577.WBPS19.genomic.fa.gz.fai \
             --gzi /data/schistosoma_mansoni.PRJEA36577.WBPS19.genomic.fa.gz.gzi \
-            --assembly 'Schistosoma mansoni' \
-            --not-editable
+            --assembly 'Schistosoma mansoni'
 
           apollo feature \
             import \
