--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -109,6 +109,7 @@
     "jest": "^29.6.2",
     "mongodb": "^4.7.0",
     "rimraf": "^3.0.2",
+    "serve": "^14.0.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^29.1.1",
