--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -46,7 +46,7 @@ jobs:
         run: yarn build
         working-directory: packages/apollo-shared
       - name: Lint codebase
-        run: yarn eslint --ext .js,.ts,.jsx,.tsx .
+        run: yarn eslint
   docker:
     if: ${{ github.ref == 'refs/heads/main' }}
     uses: ./.github/workflows/docker.yml
