--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "packages/*"
   ],
   "scripts": {
-    "lint": "cross-env NODE_OPTIONS='--max-old-space-size=4096' yarn eslint --report-unused-disable-directives --max-warnings 0 --ext .js,.ts,.jsx,.tsx .",
+    "lint": "cross-env NODE_OPTIONS='--max-old-space-size=4096' yarn eslint --max-warnings 0",
     "build:shared": "yarn workspace @apollo-annotation/shared run build",
     "release": "tsx scripts/makeGitTag.ts",
     "start:shared": "yarn workspace @apollo-annotation/shared run start",
@@ -17,24 +17,25 @@
     "postinstall": "husky"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@types/cross-spawn": "^6.0.6",
     "@types/node": "^18.14.2",
     "@types/semver": "^7",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
     "@yarnpkg/types": "^4.0.0",
     "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
-    "eslint": "^8.57.1",
+    "eslint": "9.14.0",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "5.1.0-rc-4beb1fd8-20241118",
     "eslint-plugin-tsdoc": "^0.3.0",
-    "eslint-plugin-unicorn": "^56.0.0",
+    "eslint-plugin-unicorn": "^50.0.0",
+    "globals": "^15.12.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
@@ -44,6 +45,7 @@
     "tslib": "^2.3.1",
     "tsx": "^4.6.2",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.14.0",
     "yargs": "^17.7.2"
   },
   "packageManager": "yarn@4.3.1"
