--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.2",
     "prettier-plugin-packagejson": "^2.5.2",
+    "react": "^18.2.0",
     "semver": "^7.6.3",
     "tslib": "^2.3.1",
     "tsx": "^4.6.2",
