--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -38,10 +38,6 @@ jobs:
           echo "INSTANCE_ADDRESS=$INSTANCE_ADDRESS" >> "$GITHUB_OUTPUT"
       - name: Set up SSH
         run: |
-          set -e
-          set -u
-          set -o pipefail
-          set -x
           mkdir --parents ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/staging
           chmod 600 ~/.ssh/staging
@@ -53,7 +49,8 @@ jobs:
             ServerAliveInterval 60
             ServerAliveCountMax 10
           END
-          ssh-keyscan -H ${{ steps.ec2-describe-instances.outputs.INSTANCE_ADDRESS }} >> ~/.ssh/known_hosts
+          ssh-keygen -F ${{ steps.ec2-describe-instances.outputs.INSTANCE_ADDRESS }} || \
+            ssh-keyscan -H ${{ steps.ec2-describe-instances.outputs.INSTANCE_ADDRESS }} >> ~/.ssh/known_hosts
       - name: Create Docker context
         run: |
           docker context create staging \
