--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,5 +113,5 @@ jobs:
         working-directory: .github/workflows/deploy
         run: |
           docker --context staging compose down
-          docker --context staging compose pull
+          # docker --context staging compose pull
           docker --context staging compose up --build --detach --wait --wait-timeout 120
