Fix env file typo

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -13,6 +13,6 @@ DESCRIPTION=A server for Apollo development purposes
 PLUGIN_LOCATION=http://localhost:9000/dist/jbrowse-plugin-apollo.umd.development.js
 FEATURE_TYPE_ONTOLOGY_LOCATION=http://localhost:9000/test_data/so-v3.1.json
 LOG_LEVELS=error,warn,log,debug
-ALLOW_ROOT_USER=ftrue
+ALLOW_ROOT_USER=true
 ROOT_USER_PASSWORD=password
 ALLOW_GUEST_USER=true
