--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -84,6 +84,8 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18",
     "cypress": "12.17.3",
+    "cypress-image-diff-html-report": "^2.2.0",
+    "cypress-image-diff-js": "^2.3.0",
     "cypress-mongodb": "^6.2.0",
     "fake-indexeddb": "^4.0.2",
     "jest": "^29.6.2",
