--- a/packages/jbrowse-plugin-apollo/cypress/tsconfig.json
+++ b/packages/jbrowse-plugin-apollo/cypress/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["es5", "dom"],
     "types": ["cypress", "node"],
     "strict": true,
+    "esModuleInterop": true,
   },
   "include": ["**/*.ts", "../cypress.config.js"],
 }
