--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -91,10 +91,12 @@
     "@oclif/test": "^3.1.3",
     "@types/chai": "^4.3.19",
     "@types/cli-progress": "^3",
+    "@types/cross-spawn": "^6.0.6",
     "@types/inquirer": "^9.0.7",
     "@types/mocha": "^10",
     "@types/node": "^18.14.2",
     "babel-plugin-istanbul": "^6.1.1",
+    "cross-spawn": "^7.0.3",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "oclif": "^4.4.2",
