--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -42,11 +42,11 @@ jobs:
           yarn --cwd packages/apollo-shared start &
           ALLOW_ROOT_USER=true ROOT_USER_PASSWORD=pass yarn --cwd packages/apollo-collaboration-server start &
       - name: Run CLI tests
-        run: yarn tsx test/test.ts
+        run: yarn tsx src/test/test.ts
         working-directory: packages/apollo-cli
       # - name: Run docker tests
       #   working-directory: packages/apollo-cli
-      #   run: python3 ./test/test_docker.py
+      #   run: python3 ./src/test/test_docker.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         with:
