Basic implementation of `apollo export gff3`
To be fixed?: Output gff3 includes fasta sequence *only* if the assembly is
editable (see tests).

--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -51,6 +51,9 @@
       "change": {
         "description": "Commands to manage the change log"
       },
+      "export": {
+        "description": "Commands to export data"
+      },
       "feature": {
         "description": "Commands to manage features"
       },
