Update deps to match JBrowse 2 v3

--- a/packages/jbrowse-plugin-apollo/tsconfig.json
+++ b/packages/jbrowse-plugin-apollo/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "./src",
     "noEmit": true,
     "noEmitOnError": false,
+    "resolveJsonModule": true,
   },
   "include": ["src"],
   "exclude": ["**/dist/"],
