Test for gene model with multiple exons and unusual SO terms

--- a/packages/jbrowse-plugin-apollo/.gitignore
+++ b/packages/jbrowse-plugin-apollo/.gitignore
@@ -4,3 +4,6 @@
 cypress/videos
 cypress/screenshots
 cypress/downloads
+cypress-image-diff-html-report
+cypress-image-diff-screenshots/comparison
+cypress-image-diff-screenshots/diff
