Include comments here https://github.com/GMOD/Apollo3/pull/511#pullrequestreview-2607168267
Use includeFASTA instead of withFasta and --include-fasta instead of
--with-fasta in cli

--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -29,6 +29,7 @@
     "test": "mocha --require src/test/fixtures.ts 'src/**/*.test.ts'",
     "posttest": "yarn lint",
     "test:ci": "nyc mocha 'src/**/*.test.ts'",
+    "test:cli": "yarn tsx src/test/test.ts",
     "version": "oclif readme --multi --dir ../website/docs/admin/cli/ && oclif readme && git add README.md"
   },
   "oclif": {
