--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -42,7 +42,7 @@ jobs:
           yarn --cwd packages/apollo-shared start &
           ALLOW_ROOT_USER=true ROOT_USER_PASSWORD=pass yarn --cwd packages/apollo-collaboration-server start &
       - name: Run CLI tests
-        run: yarn tsx src/test/test.ts
+        run: yarn test:cli
         working-directory: packages/apollo-cli
       # - name: Run docker tests
       #   working-directory: packages/apollo-cli
