Introduce cypress-image-diff for visual testing (#517)
* Attempt to install cypress-image-diff

* CLI test for checks being activated and resolved

* Use more sensible sequence

* Simple tests for correct gene model and sixframe

Mostly to experiment with cypress-image-diff

* Test dir and python test deleted

* Fix CDS representation

* Use Sequence Ontology

* Test for gene model with multiple exons and unusual SO terms

* Ignore lint errors

* Make test pass, but Apollo's behaviour is incorrect - see comments in
script

* Set directory output for cypress-image-diff

* Wait for drawer to disappear

* Tmp commit: Wait for drawer to disappear, run only visual test

* Close drawer

* Use baseline from headless test

* Make sure gene model fits to screen

--- a/packages/jbrowse-plugin-apollo/.gitignore
+++ b/packages/jbrowse-plugin-apollo/.gitignore
@@ -4,3 +4,6 @@
 cypress/videos
 cypress/screenshots
 cypress/downloads
+cypress/cypress-image-diff-html-report
+cypress/cypress-image-diff-screenshots/comparison
+cypress/cypress-image-diff-screenshots/diff
