--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "5.1.0-rc-4beb1fd8-20241118",
+    "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-tsdoc": "^0.3.0",
-    "eslint-plugin-unicorn": "^50.0.0",
+    "eslint-plugin-unicorn": "^57.0.0",
     "globals": "^15.12.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
