--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -33,12 +33,15 @@ jobs:
         with:
           mongodb-version: 7
           mongodb-replica-set: test-rs
+      - name: Start local file server
+        run:
+          yarn --cwd packages/apollo-collaboration-server/test/data/ serve
+          --listen 3131 &
       - name: Run Cypress tests
         run: yarn run test:e2e
         working-directory: packages/jbrowse-plugin-apollo
       - name: Start apollo
         run: |
-          yarn --cwd packages/apollo-collaboration-server/test/data/ serve --listen 3131 &
           yarn --cwd packages/apollo-shared start &
           ALLOW_ROOT_USER=true ROOT_USER_PASSWORD=pass yarn --cwd packages/apollo-collaboration-server start &
       - name: Run CLI tests
