--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -96,7 +96,7 @@ jobs:
               jq --raw-output '.[] | select(.name=="Trichuris trichiura")._id'
           )
 
-          apollo jbrowse get-config > /data/config.json
+          apollo jbrowse get-config > tmp.config.json
 
           jbrowse add-track \
             /data/trichuris_muris.PRJEB126.WBPS19_vs_trichuris_trichiura.PRJEB535.WBPS19.paf \
@@ -104,7 +104,7 @@ jobs:
             --name "T. muris vs T. trichiura tblastx" \
             --assemblyNames "${MURIS_ID},${TRICHIURA_ID}" \
             --force
-          apollo jbrowse set-config /data/config.json
+          apollo jbrowse set-config tmp.config.json
 
           # apollo assembly get | apollo assembly delete --verbose --assembly -
           # apollo file get | apollo file delete
