--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -96,7 +96,7 @@ jobs:
               jq --raw-output '.[] | select(.name=="Trichuris trichiura")._id'
           )
 
-          apollo jbrowse get-config > data/config.json
+          apollo jbrowse get-config > /data/config.json
 
           npm install -g @jbrowse/cli
 
@@ -105,7 +105,7 @@ jobs:
             --load inPlace \
             --name "T. muris vs T. trichiura tblastx" \
             --assemblyNames "${MURIS_ID},${TRICHIURA_ID}" \
-            --target data/config.json \
+            --target /data/config.json \
             --force
 
           apollo jbrowse set-config /data/config.json
