--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -15,7 +15,7 @@
     "@apollo-annotation/schemas": "workspace:^",
     "@gmod/gff": "1.2.0",
     "@gmod/indexedfasta": "^2.0.4",
-    "@jbrowse/core": "^3.0.1",
+    "@jbrowse/core": "3.3.0",
     "bson-objectid": "^2.0.4",
     "generic-filehandle": "^3.0.0",
     "jwt-decode": "^3.1.2",
@@ -39,8 +39,8 @@
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "@mui/material": "^6.0.0",
-    "@mui/x-data-grid": "^7.0.0",
+    "@mui/material": "^7.0.0",
+    "@mui/x-data-grid": "^8.0.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "^5.4.0",
