--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -15,7 +15,7 @@
     "@apollo-annotation/schemas": "workspace:^",
     "@gmod/gff": "1.2.0",
     "@gmod/indexedfasta": "^2.0.4",
-    "@jbrowse/core": "3.3.0",
+    "@jbrowse/core": "^3.4.0",
     "bson-objectid": "^2.0.4",
     "generic-filehandle": "^3.0.0",
     "jwt-decode": "^3.1.2",
