--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -54,8 +54,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@gmod/gff": "1.2.0",
-    "@jbrowse/plugin-authentication": "3.3.0",
-    "@jbrowse/plugin-linear-genome-view": "3.3.0",
+    "@jbrowse/plugin-authentication": "^3.4.0",
+    "@jbrowse/plugin-linear-genome-view": "^3.4.0",
     "@mui/icons-material": "^5.8.4",
     "@types/jsonpath": "^0.2.0",
     "autosuggest-highlight": "^3.3.4",
@@ -71,8 +71,8 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@jbrowse/cli": "3.3.0",
-    "@jbrowse/core": "3.3.0",
+    "@jbrowse/cli": "^3.4.0",
+    "@jbrowse/core": "^3.4.0",
     "@jbrowse/development-tools": "^2.1.1",
     "@jest/globals": "^29.0.3",
     "@mui/material": "^7.0.0",
@@ -110,7 +110,7 @@
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "@jbrowse/core": "3.3.0",
+    "@jbrowse/core": "^3.4.0",
     "@mui/material": "^7.0.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
