--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,7 @@ jobs:
           else
             curl -fsSL https://s3.amazonaws.com/jbrowse.org/code/b2/main/jbrowse-web-main.zip > jbrowse-web.zip
           fi
+        working-directory: .github/workflows/deploy
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
