cli: add `gff3-file` flag

--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -82,6 +82,7 @@
     "cli-progress": "^3.12.0",
     "conf": "^12.0.0",
     "joi": "^17.7.0",
+    "nanoid": "^4.0.2",
     "open": "^10.1.0",
     "tslib": "^2.3.1",
     "undici": "^6.7.0",
