--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run Jest tests
         run: yarn test
       - name: Get latest JBrowse
-        run: yarn run jbrowse create --tag v3.6.4 .jbrowse
+        run: yarn run jbrowse create --nightly .jbrowse
         working-directory: packages/jbrowse-plugin-apollo
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.10.0
