Add missing transitive dep

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,6 +3,9 @@ enableConstraintsChecks: true
 enableGlobalCache: false
 
 packageExtensions:
+  "@jbrowse/cli@*":
+    dependencies:
+      "tmp": "^0.2.1"
   "@jbrowse/core@*":
     peerDependencies:
       "@emotion/react": "*"
