--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -97,13 +97,14 @@
     "@types/express-session": "^1",
     "@types/jest": "^27.0.1",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.14.2",
+    "@types/node": "^20.19.15",
     "@types/node-fetch": "^2.6.2",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/passport-microsoft": "^0.0.0",
     "@types/react": "^18.3.4",
+    "@types/stream-concat": "^2.0.0",
     "@types/supertest": "^2.0.11",
     "jest": "^29.6.2",
     "mongodb": "^4.7.0",
