--- a/packages/apollo-collaboration-server/tsconfig.json
+++ b/packages/apollo-collaboration-server/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig-base.json",
   "compilerOptions": {
     "module": "commonjs",
+    "lib": ["esnext"],
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
