--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@apollo-annotation/mst": "workspace:^",
+    "@gmod/gff": "^2.0.0",
     "@nestjs/common": "^10.1.0",
     "@nestjs/core": "^10.1.0",
     "@types/node": "^20.19.15",
