--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -53,7 +53,7 @@
     "@apollo-annotation/shared": "workspace:^",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@gmod/gff": "1.2.0",
+    "@gmod/gff": "^2.0.0",
     "@jbrowse/plugin-authentication": "^3.6.5",
     "@jbrowse/plugin-linear-genome-view": "^3.6.5",
     "@mui/icons-material": "^6.5.0",
