Update yarn and yarn sdk versions

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,10 +2,12 @@ enableConstraintsChecks: true
 
 enableGlobalCache: false
 
+npmMinimalAgeGate: 2880
+
 packageExtensions:
   "@jbrowse/cli@*":
     dependencies:
-      "tmp": "^0.2.1"
+      tmp: ^0.2.1
   "@jbrowse/core@*":
     peerDependencies:
       "@emotion/react": "*"
@@ -36,4 +38,4 @@ packageExtensions:
     peerDependencies:
       mongoose: "*"
 
-yarnPath: .yarn/releases/yarn-4.7.0.cjs
+yarnPath: .yarn/releases/yarn-4.10.3.cjs
