--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -18,9 +18,10 @@
   },
   "devDependencies": {
     "@apollo-annotation/mst": "workspace:^",
+    "@gmod/gff": "^2.0.0",
     "@nestjs/common": "^10.1.0",
     "@nestjs/core": "^10.1.0",
-    "@types/node": "^18.14.2",
+    "@types/node": "^20.19.15",
     "generic-filehandle": "^3.0.0",
     "mongoose": "^6.12.0",
     "typescript": "^5.5.3"
