--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -13,7 +13,7 @@
     "@apollo-annotation/common": "workspace:^",
     "@apollo-annotation/mst": "workspace:^",
     "@apollo-annotation/schemas": "workspace:^",
-    "@gmod/gff": "1.2.0",
+    "@gmod/gff": "^2.0.0",
     "@gmod/indexedfasta": "^2.0.4",
     "@jbrowse/core": "^3.6.5",
     "bson-objectid": "^2.0.4",
@@ -25,7 +25,7 @@
     "@nestjs/common": "^10.1.0",
     "@nestjs/core": "^10.1.0",
     "@types/chai": "^4.3.19",
-    "@types/node": "^18.14.2",
+    "@types/node": "^20.19.15",
     "chai": "^5.1.1",
     "chai-exclude": "^3.0.0",
     "glob": "^11.0.0",
