--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -53,7 +53,7 @@
     "@apollo-annotation/shared": "workspace:^",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@gmod/gff": "1.2.0",
+    "@gmod/gff": "^2.0.0",
     "@jbrowse/plugin-authentication": "^3.6.5",
     "@jbrowse/plugin-linear-genome-view": "^3.6.5",
     "@mui/icons-material": "^6.5.0",
@@ -79,7 +79,7 @@
     "@mui/x-data-grid": "^8.0.0",
     "@types/autosuggest-highlight": "^3",
     "@types/file-saver": "^2",
-    "@types/node": "^18.14.2",
+    "@types/node": "^20.19.15",
     "@types/prop-types": "^15",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18",
