--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,10 @@ on:
   push:
     tags: v[0-9]+.[0-9]+.[0-9]+*
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   publish-npm:
     name: Publish to NPM
@@ -25,11 +29,9 @@ jobs:
         run: yarn build
         working-directory: packages/apollo-shared
       - name: Publish
-        run: |
-          yarn config set npmAuthToken ${{ secrets.NPM_TOKEN }}
-          yarn workspaces foreach --no-private --all npm publish --tolerate-republish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run:
+          yarn workspaces foreach --no-private --all npm publish
+          --tolerate-republish
   publish-docker:
     uses: ./.github/workflows/docker.yml
     with:
