--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -67,6 +67,7 @@
     "idb": "^7.1.1",
     "jsonpath": "^1.1.1",
     "nanoid": "^4.0.2",
+    "rbush": "^4.0.1",
     "socket.io-client": "^4.5.4",
     "tslib": "^2.3.1"
   },
@@ -81,6 +82,7 @@
     "@types/file-saver": "^2",
     "@types/node": "^20.19.15",
     "@types/prop-types": "^15",
+    "@types/rbush": "^4.0.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18",
     "cypress": "12.17.3",
