Update SO definitions

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -11,7 +11,7 @@ MICROSOFT_CLIENT_ID=fabdd045-163c-4712-9d40-dbbb043b3090
 MICROSOFT_CLIENT_SECRET=~Gr8Q~h6RTU7SMC-fjNxXy_~nabTD-ME_rFyLa.M
 DESCRIPTION=A server for Apollo development purposes
 PLUGIN_LOCATION=http://localhost:9000/dist/jbrowse-plugin-apollo.umd.development.js
-FEATURE_TYPE_ONTOLOGY_LOCATION=http://localhost:9000/test_data/so-v3.1.json
+FEATURE_TYPE_ONTOLOGY_LOCATION=http://localhost:9000/test_data/so-2024-11-18.json
 LOG_LEVELS=error,warn,log,debug
 ALLOW_ROOT_USER=true
 ROOT_USER_PASSWORD=password
