--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,8 +5,9 @@ on:
     tags: v[0-9]+.[0-9]+.[0-9]+*
 
 permissions:
-  id-token: write
   contents: read
+  id-token: write
+  packages: write
 
 jobs:
   publish-npm:
@@ -33,6 +34,7 @@ jobs:
           yarn workspaces foreach --no-private --all npm publish
           --tolerate-republish
   publish-docker:
+    needs: [publish-npm]
     uses: ./.github/workflows/docker.yml
     with:
       tag: latest
